--- a/wpf-app-test-async-void-methods/wpf-app-test-async-void-methods.csproj
+++ b/wpf-app-test-async-void-methods/wpf-app-test-async-void-methods.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IVSoftware.Portable.Threading" Version="1.1.0" />
+    <PackageReference Include="IVSoftware.Portable.Threading" Version="*" />
   </ItemGroup>
 
 </Project>
